switch to using a different spark